# beaglebone-imu

./: CMakeLists.txt  README.md  bmp085.h  hmc588l.cpp  i2c.cpp  imu.h  itg3205.h
include/: accelerometer.h  bma180.h  gy-81.h  hmc588l.h  i2c.h  itg3205.h  sensor3axis.h
src/: bma180.cpp  bmp085.cpp  gy-81.cpp  itg3205.cpp  test_gy81.cpp
